2000-08-09  Not Zed  <NotZed@HelixCode.com>

	* mail-autofilter.c: New file to hold auto filter/vfolder stuff.

2000-08-09  Christopher James Lahey  <clahey@helixcode.com>

	* mail-display.c, mail-format.c, mail-ops.c: Fixed some warnings.

	* message-list.c: Fix the call to e_popup_menu_run to match the
	new signature.

2000-08-09  Ettore Perazzoli  <ettore@helixcode.com>

	* folder-browser-factory.c (control_activate): Create a "print
	message" menu item.

2000-08-09  Jeffrey Stedfast  <fejj@helixcode.com>

	* message-list.c (message_list_init): Attached a double_click
	signal handler
	(on_double_click): Our lovely new double_click callback. Will
	display the current selected message in a new window

2000-08-08  Jeremy Wise  <jwise@pathwaynet.com>
	* mail-config.[ch], folder-browser.c: Added configuration work to
	save the size of the vpaned widget.  It will be functional when the
	e_paned widget emits a "resized" signal

2000-08-08  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-config.h: Added void as an argument to functions not
	needing any parameters to avoid compile warnings.

2000-08-08  Jeremy Wise  <jwise@pathwaynet.com>
	* mail-config.[ch], main.c, folder-browser-factory.c: State of the
	threaded list toggle is now saved via gnome_config

2000-08-08  Dan Winship  <danw@helixcode.com>

	* mail-config-gui.c (service_page_item_new): Attach a signal
	handler to call the "changed" function when the user clicks the
	"keep on server" checkbox.
	
2000-08-08  Jeffrey Stedfast  <fejj@helixcode.com>

	* mail-ops.c (view_msg): New convenience function with params of a
	normal Gtk callback function. We also now create a new
	FolderBrowser object so that the message-view window isn't tied to
	the display in the main window
	(view_message): Now calls view_msg (this function is a bonobo
	callback and can't be used with gtk widgets)
	(edit_msg): Same idea as view_msg()
	(edit_message): Again, same as view_message()
