@@ -43,6 +43,7 @@ evolution_mail_SOURCES =		\
 	folder-browser.h		\
 	folder-browser-factory.c	\
 	mail-autofilter.c		\
+	mail-autofilter.h		\
 	mail-config.c			\
 	mail-config.h			\
 	mail-config-gui.c		\
