@@ -19,6 +19,7 @@
 #include "evolution-shell-component.h"
 #include "folder-browser.h"
 #include "mail-vfolder.h"
+#include "mail-autofilter.h"
 
 #include "camel/camel.h"
 
@@ -304,3 +305,13 @@ vfolder_gui_add_rule(VfolderRule *rule)
 	gtk_signal_connect((GtkObject *)gd, "clicked", new_rule_clicked, NULL);
 	gtk_widget_show((GtkWidget *)gd);
 }
+
+void
+vfolder_gui_add_from_message(CamelMimeMessage *msg, int flags, const char *source)
+{
+	VfolderRule *rule;
+
+	rule = (VfolderRule*)vfolder_rule_from_message(context, msg, flags, source);
+	vfolder_gui_add_rule(rule);
+}
+
