@@ -9,6 +9,7 @@
 #include "evolution-shell-component.h"
 
 #include "camel/camel-folder.h"
+#include "camel/camel-mime-message.h"
 #include "filter/vfolder-rule.h"
 #include "filter/filter-part.h"
 
@@ -18,5 +19,6 @@ CamelFolder *vfolder_uri_to_folder(const char *uri);
 void vfolder_edit(void);
 FilterPart *vfolder_create_part(const char *name);
 void vfolder_gui_add_rule(VfolderRule *rule);
+void vfolder_gui_add_from_message(CamelMimeMessage *msg, int flags, const char *source);
 
 #endif
